#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
################################################################


2014-05-31  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999987 released.

        * Changed Makefile.PL to look inside of author dir
          in cpan build directory when building.


2014-01-30  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999986 released.

        * Removed dir open for setuid and replaced with ls


2014-01-16  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999985 released.

        * Fix for (s)ftp output parsing.


2014-01-12  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999984 released.

        * Change global timeout to 60 seconds.

        * Added 1/50 second delay to end of ftp cmds.

        * Put in more fixes for MozRepl installation.


2014-01-04  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999983 released.

        * Put in more robust reporting checking for put and get.

        * Put in more fixes for MozRepl installation.


2013-12-29  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999982 released.

        * Put in fixes for MozRepl installation.


2013-12-28  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999981 released.

        * Yet more Makefile.PL fixes.


2013-12-28  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999980 released.

        * More Makefile.PL fixes.


2013-12-28  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999979 released.

        * Fixed routine for finding newest release in
          Makefile.PL.
