@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.99999987';
+our $VERSION='0.99999988';
 
 
 use 5.005;
